k3s/argocd/patch-argocd-application-controller.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          command:
            - argocd-application-controller
            - --kubectl-parallelism-limit
            - "1"
          resources:
            limits:
              memory: 512Mi
